--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,7 @@
     <title>Frontend Mentor | Interactive rating component</title>
     <link rel="stylesheet" href="style1.css">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 </head>
 <body>
     <div class="container">
